[project]
name = "pyana"
version = "0.1.0"
description = "Analysis library set. Including data analysis, plotting, etc."
authors = [
    {name = "svtter", email = "svtter@qq.com"},
]
dependencies = [
        "pytest>=8.3.3",
    "ruff>=0.7.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "mkdocs>=1.6.1",
    "pymdown-extensions>=10.11.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
